--- a/BooksStoreGUI/App.config
+++ b/BooksStoreGUI/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <connectionStrings>
-	  <add name="Shop" connectionString="Data Source=DESKTOP-P6PNM3B;Initial Catalog=Shop;Integrated Security=True" providerName="System.Data.SqlClient"/>
+	  <add name="Shop" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Shop;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
